--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -329,6 +329,6 @@ nav:
           - Octavia CLI Reference: Open_Cloud_Platform/Taikun_OCP-Octavia/Octavia_CLI_Reference.md
       - Taikun OCP Skydive:
           - Taikun OCP – Skydive: Open_Cloud_Platform/Taikun_OCP-Skydive/Taikun_OCP_-_Skydive.md
-  - Glossarry:
-      - Glossarry: Glossary/Glossary.md
+  - Glossary:
+      - Glossary: Glossary/Glossary.md
 
